# lidar_tools

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yaml
docs/: frontend_staging_plan.md  vendor_reports.md
notebooks/: CO_LiDAR_test_area.geojson  CO_LiDAR_test_area_final.geojson  DSM_processing_no_reproj.ipynb  DSM_processing_reproj.ipynb  Neon-projection.ipynb  SRS_CRS.wkt  UTM_10N_WGS84_G2139_3D.wkt  UTM_13N_WGS84_G2139_3D.wkt  clean-neon-data-download.ipynb  lidar-tools-datum.ipynb  processing_extent.geojson  slurm_test.sh  uw-campus.geojson  very_small_aoi.geojson
sandbox/: README.md
scripts/: recover_temp_mosaic.py
src/grid_pc/: __init__.py  __main__.py  cli.py  dsm_functions.py  filter_percentile.py  pdal_pipeline.py
src/lidar_tools/: __init__.py  __main__.py  cli.py  driver.py  dsm_functions.py  filter_percentile.py  geodesy.py  merge.py  pdal_pipeline.py  preview.py  report_metrics.py  staging.py  survey.py
tests/: test_all.py  test_driver.py  test_dsm_functions.py  test_geodesy.py  test_geodesy_epoch.py  test_merge.py  test_pdal_pipeline.py  test_preview.py  test_report_metrics.py  test_staging.py  test_survey.py
