[project]
name = "lidar_tools"
version="0.1.0"
authors = [
  { name = "Scott Henderson", email = "scottyh@uw.edu" },
  { name = "David Shean", email = "dshean@uw.edu" },
  { name = "Shashank Bhushan", email = "shashank.bhushan@nasa.gov" },
  { name = "Karthik Venkataramani", email = "vkarthik@uw.edu" },
]
description = "Centralized airborne lidar processing workflows to generate standard products"
readme = "README.md"
license.file = "LICENSE"
requires-python = ">=3.10"
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [ "cyclopts", "gdal", "geopandas", "ipykernel", "planetary-computer", "pdal", "pystac-client", "rioxarray", "requests", "scipy", "odc-stac"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project.optional-dependencies]
dev = [
  "mypy >=1.15.0,<2",
  "pytest >=8.3.5,<9",
  "ruff >=0.11.10,<0.13"
]

[project.scripts]
lidar-tools = "lidar_tools.cli:app"

[tool.ruff.lint.per-file-ignores]
"pdal_pipeline.py" = ["E402"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "linux-64"]

[tool.pixi.environments]
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]

example = "lidar-tools rasterize --polygon notebooks/uw-campus.geojson --output /tmp/uwcampus --num-process 5 --no-cleanup"

[tool.pixi.feature.dev.tasks]
test = "pytest"
typecheck = "mypy src/lidar_tools/"
lint = "ruff check src/lidar_tools/ --fix ; ruff format"
test-create-dsm = "time lidar-tools --extent-polygon notebooks/uw-campus.geojson --output /tmp/uwcampus --dst-crs notebooks/UTM_10N_WGS84_G2139_3D.wkt --num-process 5 --no-cleanup"

[tool.pixi.dependencies]
cyclopts = ">=3.22.2,<4"
gdal = ">=3.10.3,<4"
geopandas = ">=1.1.1,<2"
ipykernel = ">=6.29.5,<7"
planetary-computer = ">=1.0.0,<2"
pdal = ">=2.8.4,<3"
pystac-client = ">=0.8.6,<0.9"
rioxarray = ">=0.19.0,<0.20"
requests = ">=2.32.4,<3"
scipy = ">=1.16.0,<2"
odc-stac = ">=0.4.0,<0.5"
dask = ">=2025.7.0,<2026"
distributed = ">=2025.7.0,<2026"

[tool.pixi.pypi-dependencies]
lidar_tools = { path = ".", editable = false }

[tool.pixi.feature.dev.dependencies]
mypy = "*"
pytest = "*"
ruff = "*"

[tool.pixi.feature.dev.pypi-dependencies]
lidar_tools = { path = ".", editable = true }
