[project]
name = "lidar_tools"
version="0.2.0"
authors = [
  { name = "Scott Henderson", email = "scottyh@uw.edu" },
  { name = "David Shean", email = "dshean@uw.edu" },
  { name = "Shashank Bhushan", email = "shashank.bhushan@nasa.gov" },
  { name = "Karthik Venkataramani", email = "vkarthik@uw.edu" },
]
description = "Centralized airborne lidar processing workflows to generate standard products"
readme = "README.md"
license.file = "LICENSE"
requires-python = ">=3.10"
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "cyclopts >=3.16.1,<4",
  "dask >=2025.7.0,<2026",
  "distributed >=2025.7.0,<2026",
  "gdal >=3.10.3,<4",
  "geopandas >=1.0.1,<2",
  "ipykernel >=6.29.5,<7",
  "planetary-computer >=1.0.0,<2",
  # NOTE: from pip this installs *python-pdal*, just get from conda
  "pdal >=3.4.5,<4",
  "pystac-client >=0.8.6,<0.9",
  "rioxarray >=0.19.0,<0.20",
  "requests >=2.32.3,<3",
  "scipy >=1.15.2,<2",
  "odc-stac >=0.4.0,<0.5"
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project.optional-dependencies]
dev = [
  "mypy >=1.15.0,<2",
  "pytest >=8.3.5,<9",
  "ruff >=0.11.10,<0.13"
]

[project.scripts]
lidar-tools = "lidar_tools.cli:app"

[tool.ruff.lint.per-file-ignores]
"pdal_pipeline.py" = ["E402"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64"]
preview = ["pixi-build"]

[tool.pixi.environments]
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
example = "lidar-tools rasterize --geometry notebooks/uw-campus.geojson --output /tmp/lidar-tools-example"

[tool.pixi.feature.dev.tasks]
test = "pytest"
typecheck = "mypy src/lidar_tools/"
lint = "ruff check src/lidar_tools/ --fix ; ruff format"
test-example-local = "time lidar-tools rasterize --overwrite --cleanup --geometry notebooks/uw-campus.geojson --input ~/Data/lidar_tools/WA_KingCounty_2021_B21 --output /tmp/lidar-tools-test-local"
test-example-ept = "time lidar-tools rasterize --cleanup --geometry notebooks/uw-campus.geojson --output /tmp/lidar-tools-test-ept"
test-example-parallel = "time lidar-tools rasterize --num-process 5 --geometry notebooks/uw-campus.geojson --output /tmp/test/uwcampus-parallel --dst-crs notebooks/UTM_10N_WGS84_G2139_3D.wkt"
test-example-cleanup = "time lidar-tools rasterize --cleanup --geometry notebooks/uw-campus.geojson --output /tmp/test/uwcampus-cleanup --num-process 5"


[tool.pixi.dependencies]
cyclopts = "*"
dask = "*"
distributed = "*"
gdal = "*"
geopandas = "*"
ipykernel = "*"
planetary-computer = "*"
pdal = "*"
pystac-client = "*"
rioxarray = "*"
requests = "*"
scipy = "*"
odc-stac = "*"

[tool.pixi.pypi-dependencies]
lidar_tools = { path = ".", editable = true }

[tool.pixi.feature.dev.dependencies]
mypy = "*"
pytest = "*"
ruff = "*"

# The following section is for building .conda packages
# NOTE: A lot of this is duplicated from [project] which used for pypi packages
# This is a 'preview' feature so likely will change rapidly
# https://github.com/prefix-dev/pixi/issues/3166
[tool.pixi.package]
name = "lidar_tools"
version = "0.2.0"

[tool.pixi.package.build.backend]
name = "pixi-build-python"
version = "==0.3.2"

[tool.pixi.package.host-dependencies]
hatchling = "*"

[tool.pixi.package.run-dependencies]
# NOTE: keep consistent with dependencies listed above
cyclopts = ">=3.16.1"
dask = ">=2025.7.0,<2026"
distributed = ">=2025.7.0,<2026"
gdal = ">=3.10.3"
geopandas = ">=1.0.1"
ipykernel = ">=6.29.5"
planetary-computer = ">=1.0.0"
python-pdal = ">=3.4.5"
pystac-client = ">=0.8.6"
rioxarray = ">=0.19.0"
requests = ">=2.32.3"
scipy = ">=1.15.2"
odc-stac = ">=0.4.0"
