[project]
name = "lidar_tools"
version="0.2.0"
authors = [
  { name = "Scott Henderson", email = "scottyh@uw.edu" },
  { name = "David Shean", email = "dshean@uw.edu" },
  { name = "Shashank Bhushan", email = "shashank.bhushan@nasa.gov" },
  { name = "Karthik Venkataramani", email = "vkarthik@uw.edu" },
]
description = "Centralized airborne lidar processing workflows to generate standard products"
readme = "README.md"
license.file = "LICENSE"
requires-python = ">=3.10"
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "cyclopts",
  "dask",
  "distributed",
  "gdal",
  "geopandas",
  "ipykernel",
  "planetary-computer",
  # NOTE: from pip this installs *python-pdal*, just get from conda
  "pdal",
  "pystac-client",
  "pyyaml",
  "rioxarray",
  "requests",
  "scipy",
  "odc-stac"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project.optional-dependencies]
dev = [
  "mypy",
  "pytest",
  "ruff"
]

[project.scripts]
lidar-tools = "lidar_tools.cli:app"

[tool.ruff.lint.per-file-ignores]
"pdal_pipeline.py" = ["E402"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64"]
preview = ["pixi-build"]

[tool.pixi.environments]
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
example = "lidar-tools rasterize --geometry notebooks/uw-campus.geojson --output /tmp/lidar-tools-example"

[tool.pixi.feature.dev.tasks]
test = "pytest"
typecheck = "mypy src/lidar_tools/"
lint = "ruff check src/lidar_tools/ --fix ; ruff format"
test-example-ept = "time lidar-tools rasterize --geometry notebooks/uw-campus.geojson --output /tmp/lidar-tools-test/ept"
test-example-local = "time lidar-tools rasterize --geometry notebooks/uw-campus.geojson --input ~/Data/lidar_tools/WA_KingCounty_2021_B21 --output /tmp/lidar-tools-test/local"
test-example-nocleanup = "time lidar-tools rasterize --quiet --num-process 4 --no-cleanup --geometry notebooks/uw-campus.geojson --output /tmp/lidar-tools-test/uwcampus-nocleanup"
test-example-parallel = "time lidar-tools rasterize --quiet --num-process 4 --geometry notebooks/uw-campus.geojson --output /tmp/lidar-tools-test/uwcampus-parallel --dst-crs notebooks/UTM_10N_WGS84_G2139_3D.wkt"
test-example-dsmfilter = "time lidar-tools rasterize --no-cleanup --quiet --num-process 4 --geometry notebooks/uw-campus.geojson --output /tmp/lidar-tools-test/uwcampus-filter --dsm-gridding-choice 95-pct --products dsm"

[tool.pixi.dependencies]
cyclopts = ">=4.3.0,<5"
dask = ">=2025.12.0,<2026"
distributed = ">=2025.12.0,<2026"
gdal = ">=3.12.0,<4"
geopandas = ">=1.1.1,<2"
ipykernel = ">=7.1.0,<8"
planetary-computer = ">=1.0.0,<2"
pdal = ">=2.9.2,<3"
pystac-client = ">=0.9.0,<0.10"
rioxarray = ">=0.20.0,<0.21"
requests = ">=2.32.5,<3"
scipy = ">=1.16.3,<2"
odc-stac = ">=0.5.0,<0.6"

[tool.pixi.pypi-dependencies]
lidar_tools = { path = ".", editable = true }

[tool.pixi.feature.dev.dependencies]
mypy = ">=1.19.0,<2"
pytest = ">=9.0.2,<10"
ruff = ">=0.14.8,<0.15"

# The following section is for building .conda packages
# NOTE: A lot of this is duplicated from [project] which used for pypi packages
# This is a 'preview' feature so likely will change rapidly
# https://github.com/prefix-dev/pixi/issues/3166
[tool.pixi.package]
name = "lidar_tools"
version = "0.2.0"

[tool.pixi.package.build.backend]
name = "pixi-build-python"
version = "==0.3.2"

[tool.pixi.package.host-dependencies]
hatchling = "*"

[tool.pixi.package.run-dependencies]
# NOTE: keep consistent with dependencies listed above
#python-pdal = ">=3.4.5"
cyclopts = ">=4.3.0"
dask = ">=2025.12.0"
distributed = ">=2025.12.0"
gdal = ">=3.12.0"
geopandas = ">=1.1.1"
ipykernel = ">=7.1.0"
planetary-computer = ">=1.0.0"
pdal = ">=2.9.2"
pystac-client = ">=0.9.0"
rioxarray = ">=0.20.0"
requests = ">=2.32.5"
scipy = ">=1.16.3"
odc-stac = ">=0.5.0"
